--- a/01_exercico_divisoes/css/style.css
+++ b/01_exercico_divisoes/css/style.css
@@ -3,9 +3,46 @@ body{
 }
 
 .container {
-    width: 700px;
-    height: 400px;   
+    width: 900px;
+    height: 600px;   
     background: white;
     border: 1px solid black;
     margin: 0 auto;
+    padding: 10px;
+}
+
+.topo {
+    width: 100%;
+    height: 100px;
+    border: 1px solid black;
+    background: yellow;
+}
+
+.meio {
+    width: 100%;
+    height: 400px;
+    border: 1px solid black;
+    margin: 10px 0;
+    background: blue;
+}
+
+.coluna_esquerda {
+    width: 30%;
+    height: 400px;
+    display: inline-block;
+    background: pink;
+}
+
+.coluna_direita {
+    width: 69.5%;
+    height: 400px;
+    display: inline-block;
+    background: red;
+}
+
+.rodape {
+    width: 100%;
+    height: 50px;
+    border: 1px solid black;
+    background: orange;
 }
