--- a/01_exercico_divisoes/css/style.css
+++ b/01_exercico_divisoes/css/style.css
@@ -9,6 +9,7 @@ body{
     border: 1px solid black;
     margin: 0 auto;
     padding: 10px;
+    box-sizing: border-box;
 }
 
 .topo {
@@ -16,6 +17,7 @@ body{
     height: 100px;
     border: 1px solid black;
     background: yellow;
+    box-sizing: border-box;
 }
 
 .meio {
@@ -24,6 +26,7 @@ body{
     border: 1px solid black;
     margin: 10px 0;
     background: blue;
+    box-sizing: border-box;
 }
 
 /* COLUNA ESQUERDA*/
@@ -86,4 +89,5 @@ body{
     height: 50px;
     border: 1px solid black;
     background: orange;
+    box-sizing: border-box;
 }
