--- a/01_exercico_divisoes/css/style.css
+++ b/01_exercico_divisoes/css/style.css
@@ -41,18 +41,29 @@ body{
     width: 100%;
     height: 210px;
     border: 1px solid black;
+    box-sizing: border-box;
+}
+
+.bloco_01_item {
+    width: 100%;
+    height: 50px;
+    border: 1px solid black;
+    background: purple; 
+    box-sizing: border-box;
 }
 
 .esquerda_bloco_02 {
     width: 100%;
     height: 80px;
     border: 1px solid black;
+    box-sizing: border-box;
 }
 
 .esquerda_bloco_03 {
     width: 100%;
     height: 100px;
     border: 1px solid black;
+    box-sizing: border-box;
 }
 
 
@@ -66,21 +77,37 @@ body{
 
 .direita_bloco_01 {
     width: 100%;
-    height: 130px;
-    border: 1px solid black;
+    height: 105px;
+    background: aqua;
+}
+
+.direita_bloco_01 > div {
+    width: 50%;
+    height: 105px;
+    border: 1px solid black;    
+    box-sizing: border-box;
 }
 
 .direita_bloco_02 {
     width: 100%;
-    height: 160px;
+    height: 185px;
     border: 1px solid black;
     background: gray;
+    box-sizing: border-box;
 }
 
 .direita_bloco_03 {
     width: 100%;
     height: 100px;
+   
+}
+
+.direita_bloco_03 > div {
+    width: 32.5%;
+    height: 100px;
     border: 1px solid black;
+    display: inline-block;
+    box-sizing: border-box;
     background: green;
 }
 
