--- a/01_exercicio_divisoes/css/style.css
+++ b/01_exercicio_divisoes/css/style.css
@@ -1,12 +1,12 @@
 body{
     background: #cccccc;
+    margin: 0;
 }
 
 .container {
-    width: 900px;
-    height: 600px;   
+    width: 940px;
+    height: 620px;  
     background: white;
-    border: 1px solid black;
     margin: 0 auto;
     padding: 10px;
     box-sizing: border-box;
@@ -15,106 +15,117 @@ body{
 .topo {
     width: 100%;
     height: 100px;
-    border: 1px solid black;
-    background: yellow;
+    border: 10px solid #fdfd00;
+    background: #0099ff;
     box-sizing: border-box;
 }
 
 .meio {
     width: 100%;
-    height: 400px;
-    border: 1px solid black;
+    height: 420px;
     margin: 10px 0;
-    background: blue;
-    box-sizing: border-box;
 }
 
 /* COLUNA ESQUERDA*/
 .coluna_esquerda {
-    width: 30%;
-    height: 400px;
+    width: 28.9%;
+    height: 420px;
     display: inline-block;
-    background: pink;
+    padding-right: 10px;
 }
 
 .esquerda_bloco_01 {
     width: 100%;
-    height: 210px;
-    border: 1px solid black;
+    height: 220px;
+    border: 10px solid #669bcd;
     box-sizing: border-box;
 }
 
 .bloco_01_item {
     width: 100%;
     height: 50px;
-    border: 1px solid black;
-    background: purple; 
+    border-bottom: 10px solid #669bcd;
+    background: #fefe9c; 
     box-sizing: border-box;
+}
+
+.bloco_01_item:last-child {
+    border-bottom: none;
 }
 
 .esquerda_bloco_02 {
     width: 100%;
-    height: 80px;
-    border: 1px solid black;
-    box-sizing: border-box;
+    height: 70px;
+    background: #0099ff;
+    margin-top: 10px;
 }
 
 .esquerda_bloco_03 {
     width: 100%;
-    height: 100px;
-    border: 1px solid black;
-    box-sizing: border-box;
+    height: 110px;
+    background: #FFFFFF;
+    margin-top: 10px;
 }
 
 
 /* COLUNA DIREITA*/
 .coluna_direita {
     width: 69.5%;
-    height: 400px;
+    height: 420px;
     display: inline-block;
-    background: red;
 }
 
 .direita_bloco_01 {
     width: 100%;
-    height: 105px;
-    background: aqua;
+    height: 120px;
 }
 
 .direita_bloco_01 > div {
-    width: 50%;
-    height: 105px;
-    border: 1px solid black;    
-    box-sizing: border-box;
+    width: 49%;
+    height: 120px;
+    display: inline-block;
+    box-sizing: border-box;    
+    background: #feff99;
+}
+
+.direita_bloco_01> div:last-child {
+    margin-left: 8px;
 }
 
 .direita_bloco_02 {
     width: 100%;
-    height: 185px;
-    border: 1px solid black;
-    background: gray;
+    height: 170px;
+    background: #669acc;
+    border: 10px solid #fcff9c;
     box-sizing: border-box;
+    margin: 10px 0;
 }
 
 .direita_bloco_03 {
     width: 100%;
-    height: 100px;
-   
+    height: 110px;
 }
 
 .direita_bloco_03 > div {
     width: 32.5%;
-    height: 100px;
-    border: 1px solid black;
+    height: 110px;
     display: inline-block;
     box-sizing: border-box;
-    background: green;
+    background: #009afd;
+}
+
+.direita_bloco_03 > div:first-child {
+    margin-right: 3.5px;
+}
+
+.direita_bloco_03 > div:last-child {
+    margin-left: 3.5px;
 }
 
 .rodape {
     width: 100%;
-    height: 50px;
-    border: 1px solid black;
-    background: orange;
+    height: 60px;
+    border: 10px solid #fdfd00;
+    background: #0099ff;
     box-sizing: border-box;
 }
