--- a/01_Modelos_Layouts/03_layout_estética/css/style.css
+++ b/01_Modelos_Layouts/03_layout_estética/css/style.css
@@ -1,5 +1,5 @@
 body { 
-    background: red;
+    font-family: 'Source', sans-serif;
 }
 
 .conteudo {    
@@ -13,15 +13,54 @@ body {
 header {
     width: 100%;
     height: 380px;
-    background: gray;
-    border: 1px solid black;
+    position: relative;
 }
 
 nav {
     width: 100%;
     height: 70px;
-    background: plum;
-    border: 1px solid black;
+    background-image: url("../img/topo.JPG");
+    background-repeat: repeat-x;
+    position: relative;
+}
+
+.menu ul {
+    width: 85%;
+    height: 30px;
+    float: right;
+}
+
+.menu li {
+    width: 140px;
+    height: 70px;
+    text-transform: uppercase;
+    display: inline-block;
+    text-align: center;
+    padding: 20px 10px;
+    box-sizing: border-box;    
+}
+
+.menu a {
+    text-decoration: none;
+    color: white;
+}
+
+.menu a:hover {
+    text-decoration: underline;
+}
+
+.logo {
+    width: 100px;
+    height: 154px;
+    position: absolute;
+    top: 0;
+    left: 20px;
+}
+
+.banner {
+    width: 100%;
+    height: 300px;
+    border-bottom: 5px solid #BBA6E7;
 }
 
 article {
