--- a/01_Modelos_Layouts/02_layout_dentista/css/style.css
+++ b/01_Modelos_Layouts/02_layout_dentista/css/style.css
@@ -1,3 +1,29 @@
 body {
     background-color: red;
 }
+
+main {
+    width: 1024px;
+    height: 640px;
+    background-color: yellow;
+    margin: 0 auto;
+}
+
+header {
+    width: 100%;
+    height: 200px;
+    background-color: green;
+}
+
+section {
+    width: 100%;
+    height: 340px;
+    background-color: gray;
+}
+
+footer {
+    width: 100%;
+    height: 100px;
+    background-color: orange;
+}
+ 
