--- a/01_Modelos_Layouts/02_layout_dentista/css/style.css
+++ b/01_Modelos_Layouts/02_layout_dentista/css/style.css
@@ -13,6 +13,38 @@ header {
     width: 100%;
     height: 200px;
     background-color: green;
+    display: block;
+}
+
+#logo {
+    width: 200px;
+    height: 120px;
+    float: left;
+}
+
+nav {
+    width: 540px;
+    height: 100px;
+    float: right;
+    margin-right: 10px;
+}
+
+ul {
+    display: inline-flex;
+}
+
+header nav li {
+    width: 110px;
+    height: 20px;
+    padding: 10px;
+    border: black 2px solid;
+    text-align: center;
+}
+
+header  nav  a {
+    text-decoration: none;
+    color: #657EA7;
+    text-transform: uppercase;
 }
 
 section {
