--- a/01_Modelos_Layouts/02_layout_dentista/css/style.css
+++ b/01_Modelos_Layouts/02_layout_dentista/css/style.css
@@ -1,5 +1,8 @@
+
 body {
     background-color: red;
+    font-family:"Trebuchet MS", Tahoma, Verdana;
+	font-size:16px;
 }
 
 main {
@@ -24,27 +27,26 @@ header {
 
 nav {
     width: 540px;
-    height: 100px;
+    height: 50px;
     float: right;
-    margin-right: 10px;
+    margin-top: 77px;
 }
 
-ul {
+nav ul {
     display: inline-flex;
 }
 
-header nav li {
-    width: 110px;
-    height: 20px;
-    padding: 10px;
-    border: black 2px solid;
-    text-align: center;
-}
-
-header  nav  a {
+nav  a {
     text-decoration: none;
     color: #657EA7;
+    font-size:18px;
     text-transform: uppercase;
+    padding:20px 15px 20px 15px;
+}
+
+nav a:hover {
+    background-color: #657EA7;
+    color: #FFF;
 }
 
 section {
