--- a/01_Modelos_Layouts/03_layout_estética/css/estilo.css
+++ b/01_Modelos_Layouts/03_layout_estética/css/estilo.css
@@ -2,6 +2,10 @@ body {
     background-color: red;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 main {
     width: 1024px;
     height: 640px;
@@ -12,7 +16,36 @@ main {
 header {
     width: 770px;
     height: 100px;
-    background-color: green;
+    margin: 0 auto;
+    background-image: url("../img/topo.jpg");
+    background-repeat: repeat-x;
+}
+
+#logo {
+    float: left;
+    margin-left: 10px;
+}
+
+nav {
+    width: 70%;
+    height: 70px;
+    padding-top: 30px;    
+    float: right;
+}
+
+ul {
+    display: inline-flex;
+}
+
+ul a {
+    padding: 5px 15px;
+    text-decoration: none;
+    color: #FFF;
+    text-transform: uppercase;
+}
+
+ul a:hover {
+    text-decoration: underline;
 }
 
 section {
@@ -24,5 +57,6 @@ section {
 footer {
     width: 770px;
     height: 35px;
+    margin: 0 auto;
     background-color: orange;
 }
